# batman

./: Cargo.toml  LICENSE  README.md
src/: batman.rs  config.rs  main.rs  notify.rs
src/dbus_bindings/: device.rs  mod.rs  notify.rs  systemd.rs  upower.rs
