[package]
name = "batman"
description = "A Blazingly Fast™ minimal battery manager for Linux"
version = "0.1.0"
authors = ["Prajwal S N <prajwalnadig21@gmail.com"]
edition = "2021"

[[bin]]
name = "batman"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
dbus = "0.9.7"
log = "0.4.20"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.8.0"

[profile.release]
opt-level = "z"
panic = "abort"
